argocd/waiter/nw-files/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: nw-files
  name: nw-files
spec:
  hostnames:
    - nw-files.snucse.org
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org
  rules:
    - backendRefs:
        - name: nw-files
          port: 80
      timeouts:
        request: 0s
        backendRequest: 0s
---
apiVersion: v1
kind: Service
metadata:
  namespace: nw-files
  name: nw-files-hl
spec:
  clusterIP: None
  selector:
    app: nw-files
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: nw-files
  name: nw-files
spec:
  selector:
    app: nw-files
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: nw-files
  name: nw-files
spec:
  serviceName: nw-files-hl
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Delete
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: db
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 10Gi
  selector:
    matchLabels:
      app: nw-files
  template:
    metadata:
      labels:
        app: nw-files
    spec:
      securityContext:
        fsGroup: 1337
      containers:
        - name: app
          image: filebrowser/filebrowser:v2.30.0-s6
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: db
              mountPath: /database
            - name: data
              mountPath: /srv
          livenessProbe:
            httpGet:
              port: http
              path: /health
          readinessProbe:
            httpGet:
              port: http
              path: /health
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
